Updated inline code formatting options

--- a/sphinx.css
+++ b/sphinx.css
@@ -27,6 +27,15 @@
 	padding-bottom: 0;
 }
 
+/* Make sure that inline code examples use a correct font size */
+.sphinx-content span.pre,
+.sphinx-content code, 
+.sphinx-content tt {
+        font-size: 100%;
+	background: transparent;
+}
+
+
 /* plone.org has border-bottom for all links, but if heading acts as a link this looks stupid */
 #content .sphinx-content h1 a:link, 
 #content .sphinx-content h2 a:link,
