Updated some overrides to be more specific.

--- a/sphinx.css
+++ b/sphinx.css
@@ -22,15 +22,15 @@
   * have different meaning for this CSS class.
   * 
   */
-.sphinx-content .section div {
+#content .sphinx-content .section div {
 	padding-top: 0;
 	padding-bottom: 0;
 }
 
 /* Make sure that inline code examples use a correct font size */
-.sphinx-content span.pre,
-.sphinx-content code, 
-.sphinx-content tt {
+#content .sphinx-content span.pre,
+#content .sphinx-content code, 
+#content .sphinx-content tt {
         font-size: 100%;
 	background: transparent;
 }
@@ -114,7 +114,7 @@ p.admonition-title:after {
  */
 
 /* We need a light background for these highlights */
-.sphinx-content pre {
+#content .sphinx-content pre {
 	color: black;
 	background: #eee;
 	border-bottom: 1px solid #aaa;
