--- a/source/_templates/plone.css
+++ b/source/_templates/plone.css
@@ -74,3 +74,20 @@ a:visited:hover {
     color: #75ad0a;
 }
 
+/* GitHub back-linking styles */
+
+#editor-trap {
+    margin: 1em;
+    padding: 1em;
+    border: 1px solid black;
+    box-shadow: 0 0 3px black;
+    -moz-box-shadow: 0 0 3px black;
+
+
+    background: white;
+    position: fixed;
+    top: 1em;
+    right: -200px;
+}
+
+
