Pirates of Carribean

--- a/source/_static/plone.css
+++ b/source/_static/plone.css
@@ -104,7 +104,7 @@ a:visited:hover {
     cursor: pointer;
 }
 
-#editor-trap h3 { 
+#editor-trap h3 {
     margin: 0 0 0.5em 0;
     padding: 0;
     background: transparent;
@@ -124,5 +124,14 @@ a:visited:hover {
 
 #editor-trap.toggled > h3 {
     display: block;
+}
+
+/* Special classes on doc front page */
+
+.itwillhurt {
+    display: inline-block;
+    font-size: 45px;
+    color: gray;
+    margin: 0 10px;
 }
 
