Fucking dragons are coming

--- a/source/_static/plone.css
+++ b/source/_static/plone.css
@@ -127,6 +127,16 @@ a:visited:hover {
 }
 
 /* Special classes on doc front page */
+#dragon-warning {
+    padding: 1em;
+    background-color: #FFE4E4;
+    border: 1px solid #FF6666;
+}
+
+#dragons-are-coming {
+    text-align: center;
+    font-size: 120%;
+}
 
 .itwillhurt {
     display: inline-block;
