Redo the logo link

--- a/source/_static/plone.css
+++ b/source/_static/plone.css
@@ -145,3 +145,17 @@ a:visited:hover {
     margin: 0 10px;
 }
 
+/* Loogo hack up */
+
+#logo-link {
+    display: block;
+    float: left;
+    margin: 0 5px 5px 0;
+}
+
+#logo-tagline {
+    display: inline;
+    vertical-align: top;
+}
+
+
