--- a/source/_static/plone.css
+++ b/source/_static/plone.css
@@ -126,6 +126,11 @@ a:visited:hover {
     display: block;
 }
 
+/* ... hide editor trap when printing ... */
+@media print {
+#editor-trap { display: none }
+}
+
 /* Special classes on doc front page */
 #dragon-warning {
     padding: 1em;
